--- a/bsconfig.json
+++ b/bsconfig.json
@@ -1,11 +1,12 @@
 {
   "name": "reason-scripts",
   "sources": ["src"],
-  "bs-dependencies": ["reason-react", "@glennsl/bs-jest"],
+  "bs-dependencies": ["reason-react", "reason-apollo", "@glennsl/bs-jest"],
   "reason": {
     "react-jsx": 2
   },
   "bsc-flags": ["-bs-super-errors"],
+  "ppx-flags": ["graphql_ppx/ppx"],
   "refmt": 3,
   "package-specs": {
     "module": "es6",
