--- a/package.json
+++ b/package.json
@@ -3,7 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "reason-scripts": "0.9.0"
+    "apollo-cache-inmemory": "^1.3.5",
+    "apollo-client": "^2.4.2",
+    "apollo-link": "^1.2.3",
+    "apollo-link-context": "^1.0.9",
+    "apollo-link-error": "^1.1.1",
+    "apollo-link-http": "^1.5.5",
+    "apollo-link-ws": "^1.0.9",
+    "graphql": "^14.0.2",
+    "graphql-tag": "^2.10.0",
+    "react-apollo": "^2.2.4",
+    "reason-apollo": "^0.14.1",
+    "reason-scripts": "0.9.0",
+    "subscriptions-transport-ws": "^0.9.15"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -14,6 +26,7 @@
   },
   "devDependencies": {
     "@glennsl/bs-jest": "^0.4.4",
+    "graphql_ppx": "^0.2.7",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "reason-react": "^0.5.3"
