Setup apollo on the client and am using allGame query

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "apollo-link-error": "^1.1.1",
     "apollo-link-http": "^1.5.5",
     "apollo-link-ws": "^1.0.9",
-    "graphql": "^14.0.2",
+    "bs-platform": "^4.0.6",
+    "graphql": "0.13.0",
     "graphql-tag": "^2.10.0",
     "react-apollo": "^2.2.4",
     "reason-apollo": "^0.14.1",
