--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@glennsl/bs-json": "^3.0.0",
     "@playlyfe/gql": "^2.6.0",
     "apollo-cache-inmemory": "^1.3.5",
     "apollo-client": "^2.4.2",
