--- a/bsconfig.json
+++ b/bsconfig.json
@@ -4,8 +4,8 @@
   "bs-dependencies": [
     "reason-react",
     "reason-apollo",
-    "@glennsl/bs-jest",
-    "@glennsl/bs-json"
+    "@glennsl/bs-json",
+    "@glennsl/bs-jest"
   ],
   "reason": {
     "react-jsx": 2
